--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <a class="list">Instagam</a>
     <a class="list">Twitter</a>
 </div>
-    <a class="other-links" href="">My CV</a> <a class="other-links"  href="">My Blog</a> <a class="other-links" href="">My other project</a>
+    <a class="other-links" href="">My CV</a> <a class="other-links"  href="">My Blog</a> <a class="other-links" href="">My other projects</a>
     <form action="mailto:kidyoncoding@gmail.com">
     <input type="email" name="" id="email">
     <input type="button" value="SUBSCRIBE" id="subscribe">    
